tests/query_errors/pipeline_stream_name_conflict/error.txt
Error: 
    5 | 
    6 | create stream snot;
    7 | create pipeline snot;
      | ^^^^^^^^^^^^^^^^^^^^ Name `snot` is already in use for another node, please use another name.
    8 | select event from in into snot;
    9 | select event from snot into out;